[tool.poetry]
name = "altair-lab-lmucciolo"
version = "0.1.0"
description = ""
authors = ["Livia Mucciolo"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ruff = "^0.6.9"
altair = "^5.4.1"
pandas = "^2.2.3"
datetime = "^5.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
